--- a/ios-code-challenge/Cells/NXTBusinessTableViewCell.xib
+++ b/ios-code-challenge/Cells/NXTBusinessTableViewCell.xib
@@ -1,48 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="NXTBusinessTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="Zok-a1-P76" customClass="NXTBusinessTableViewCell" customModule="ios_code_challenge" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="91.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zok-a1-P76" id="GDu-yL-1i2">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bog-QN-OWi">
-                        <rect key="frame" x="16" y="11" width="288" height="70"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Nq-bS-wOT">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="70"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RgH-h8-AIO">
+                        <rect key="frame" x="16" y="16" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="75x-Y8-N1w"/>
+                            <constraint firstAttribute="height" constant="60" id="fS0-qk-KlC"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wtb-Ok-3sn">
+                        <rect key="frame" x="84" y="14" width="149" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="fdY-N7-tAB"/>
+                            <constraint firstAttribute="width" constant="149" id="wTf-hu-wAF"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GB5-BW-n6j">
+                        <rect key="frame" x="84" y="37" width="160" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="Xwi-zk-Vau"/>
+                            <constraint firstAttribute="width" constant="160" id="rXA-XU-aH7"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgQ-MW-2y1">
+                        <rect key="frame" x="84" y="58" width="96" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="96" id="E3X-2E-a29"/>
+                            <constraint firstAttribute="height" constant="18" id="Pfm-ov-Uar"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" systemColor="tertiaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qQS-MC-kAr">
+                        <rect key="frame" x="241" y="14" width="63" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="63" id="77j-Hl-SLQ"/>
+                            <constraint firstAttribute="height" constant="18" id="8nh-Hg-n6i"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3cU-i5-9N9">
+                        <rect key="frame" x="205" y="58" width="99" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="99" id="4ZW-9U-idb"/>
+                            <constraint firstAttribute="height" constant="18" id="uWN-9p-eBb"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                <constraints>
+                    <constraint firstItem="GB5-BW-n6j" firstAttribute="leading" secondItem="Wtb-Ok-3sn" secondAttribute="leading" id="1yf-3R-6ma"/>
+                    <constraint firstItem="RgH-h8-AIO" firstAttribute="leading" secondItem="GDu-yL-1i2" secondAttribute="leading" constant="16" id="4gT-zg-XOC"/>
+                    <constraint firstItem="Wtb-Ok-3sn" firstAttribute="leading" secondItem="RgH-h8-AIO" secondAttribute="trailing" constant="8" id="5a0-Ve-bXk"/>
+                    <constraint firstItem="3cU-i5-9N9" firstAttribute="top" secondItem="qQS-MC-kAr" secondAttribute="bottom" constant="26" id="Age-50-Ij8"/>
+                    <constraint firstItem="3cU-i5-9N9" firstAttribute="trailing" secondItem="qQS-MC-kAr" secondAttribute="trailing" id="FSf-2y-7Zo"/>
+                    <constraint firstItem="qQS-MC-kAr" firstAttribute="top" secondItem="Wtb-Ok-3sn" secondAttribute="top" id="Iim-3R-hrl"/>
+                    <constraint firstItem="kgQ-MW-2y1" firstAttribute="leading" secondItem="Wtb-Ok-3sn" secondAttribute="leading" id="PhS-53-4IK"/>
+                    <constraint firstItem="RgH-h8-AIO" firstAttribute="top" secondItem="GDu-yL-1i2" secondAttribute="top" constant="16" id="XaJ-ew-8yE"/>
+                    <constraint firstAttribute="trailing" secondItem="qQS-MC-kAr" secondAttribute="trailing" constant="16" id="afh-co-P0l"/>
+                    <constraint firstItem="Wtb-Ok-3sn" firstAttribute="top" secondItem="GDu-yL-1i2" secondAttribute="top" constant="14" id="dSQ-aW-dZg"/>
+                    <constraint firstItem="GB5-BW-n6j" firstAttribute="top" secondItem="Wtb-Ok-3sn" secondAttribute="bottom" constant="3" id="eE4-MR-TT0"/>
+                    <constraint firstItem="kgQ-MW-2y1" firstAttribute="top" secondItem="GB5-BW-n6j" secondAttribute="bottom" constant="3" id="jqm-N1-FAH"/>
+                </constraints>
             </tableViewCellContentView>
-            <constraints>
-                <constraint firstItem="bog-QN-OWi" firstAttribute="leading" secondItem="aW0-zy-SZf" secondAttribute="leading" constant="16" id="asc-Eo-2uK"/>
-                <constraint firstItem="bog-QN-OWi" firstAttribute="top" secondItem="aW0-zy-SZf" secondAttribute="top" constant="11" id="bve-en-jw8"/>
-                <constraint firstItem="aW0-zy-SZf" firstAttribute="trailing" secondItem="bog-QN-OWi" secondAttribute="trailing" constant="16" id="hOM-on-h1y"/>
-                <constraint firstItem="aW0-zy-SZf" firstAttribute="bottom" secondItem="bog-QN-OWi" secondAttribute="bottom" constant="11" id="ybA-bc-BB0"/>
-            </constraints>
-            <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <viewLayoutGuide key="safeArea" id="un4-dK-3w5"/>
             <connections>
-                <outlet property="nameLabel" destination="4Nq-bS-wOT" id="qdc-pz-Yb5"/>
+                <outlet property="categoriesLabel" destination="GB5-BW-n6j" id="jO9-sr-Stf"/>
+                <outlet property="distanceLabel" destination="3cU-i5-9N9" id="74u-UZ-22x"/>
+                <outlet property="nameLabel" destination="Wtb-Ok-3sn" id="Fgb-Xd-KtJ"/>
+                <outlet property="ratingLabel" destination="qQS-MC-kAr" id="TjH-H0-5Mk"/>
+                <outlet property="reviewCountLabel" destination="kgQ-MW-2y1" id="HU5-MF-nPQ"/>
+                <outlet property="thumbnailImageView" destination="RgH-h8-AIO" id="TFL-Ao-brI"/>
             </connections>
-            <point key="canvasLocation" x="-174" y="-65"/>
+            <point key="canvasLocation" x="-175.36231884057972" y="-66.294642857142861"/>
         </tableViewCell>
     </objects>
 </document>
